tweak export doc css

--- a/src/client/components/resume/ResumeDoc.css
+++ b/src/client/components/resume/ResumeDoc.css
@@ -30,11 +30,15 @@ h4 {
   text-align: center;
 }
 
-.resume-section {
+.body-section{
+  padding: 0px 20px;
+}
+
+.body-sub-section {
   padding: 0px 10px;
 }
 
 .divider {
   color: #a8a8aec9;
-  font-size: 12px;
+  font-size: 13px;
  }
