--- a/src/client/components/resume/ResumeDoc.css
+++ b/src/client/components/resume/ResumeDoc.css
@@ -1,24 +1,22 @@
 
 h1 {
   font-size: 40px;
+  line-height: 45px;
   font-weight: bold;
 }
 
 h2 {
-  font-size: 30px;
-  margin: 0.25em 0px;
+  font-size: 25px;
   font-weight: bold;
 }
 
 h3 {
   font-size: 20px;
-  margin: 0.25em 0px;
   font-weight: bold;
 }
 
 h4 {
   font-size: 15px;
-  margin: 0.25em 0px;
   font-weight: bold;
 }
 
