--- a/src/client/components/resume/ResumeDoc.css
+++ b/src/client/components/resume/ResumeDoc.css
@@ -36,6 +36,10 @@ h4 {
   padding: 0px 10px;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap; 
+}
+
 .divider {
   color: #a8a8aec9;
   font-size: 13px;
